--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.453.0",
     "memorystore": "^1.6.7",
+    "mongodb": "^7.0.0",
     "multer": "^2.0.2",
     "next-themes": "^0.4.6",
     "passport": "^0.7.0",
